--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Local Storage</title>
-        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        
+        <h1>Hello</h1>
+        <button onclick="main()">remove
+        </button>
     </body>
-    <script src="/index.js"></script>
+    <script src="./main.js"></script>
     </html>
